[레거시 코드 리팩터링 - 2단계] 로마(김범수) 미션 제출합니다. (#340)
* docs: 리팩토링 사항 정리

* refactor: MenuGroup Request, Response 적용

* refactor: Product Request, Response 적용

* refactor: ControllerTest 생성 및 적용

* refactor: OrderTable Request, Response 적용

* test: TableService 빠뜨린 테스트 추가

* refactor: EmptyRequest, NumberOfGuestsRequest 적용

* refactor: TableGroup Request, Response 적용

* refactor: Menu Request Response 적용

* refactor: Order Request Response 적용

* style: 클래스 시작 첫 번째 줄 개행 추가

* refactor: 도메인 객체에 생성자 추가

* refactor: 불필요한 setter 제거

* refactor: ProductService 리팩토링

* refactor: MenuGroupService 리팩토링

* refactor: MenuService 리팩토링

* refactor: TableService 리팩토링

* refactor: OrderService 리팩토링

* refactor: TableGroupService 리팩토링

* refactor: test fixture 패키지 위치 수정

* refactor: repository 패키지 위치를 도메인 패키지로 이동

* refactor: Repository에 붙은 Dao 인터페이스 구현 제거

* refactor: ServiceTest 메뉴등록 픽스쳐 수정

* refactor: ServiceTest 단체지정 픽스쳐 수정

* refactor: ServiceTest 주문등록 픽스쳐 수정

* refactor: OrderStatus enum 사용하도록 변경

* refactor: 불변인 필드에 final 키워드 삽입

* refactor: Menu, MenuProduct를 불변 객체로 만들기

* refactor: Order, OrderLineItem을 불변 객체로 만들기(완전 불변은 아님)

* refactor: TableGroup, OrderTable 불변객체 만들기

* refactor: Order 불변객체 만들기

* docs: 리드미 수정